# OCR-Implementation

./: .gitignore  CMakeLists.txt  README.md  main.code-workspace
GUI/: main.cpp
config/: eval_config.json  train.json
data/: exampleData.csv  exampleLabels.csv  weights.json
include/: OCR.h  layer.hpp  matrix.hpp  neoron.hpp  neuralNetwork.hpp  neuron.hpp
include/GUI/: interface.hpp
include/OCR/: OCR_test.hpp
include/utils/: GUI_utils.hpp  math.hpp  read_csv.hpp
src/: OCR_core.cpp  layer.cpp  load_model.cpp  main.cpp  matrix.cpp  neuralNetwork.cpp  neuron.cpp  save_model.cpp  saving_model.cpp
src/GUI/: handleCharacterRecognition.cpp  handleImageUpload.cpp  handleLoadCustomModel.cpp  handleTrainCustomModel.cpp  interface.cpp  main.cpp  sequential_implementation.cpp  tinyfiledialogs.cpp
src/utils/: GUI_utils.cpp  fetch_data.cpp  math.cpp  read_csv.cpp
tests/: OCR_test.cpp  backPropagation.cpp  feedForward.cpp  load_model.cpp  matrix.cpp  neuron.cpp  nn.cpp  opencv_test.cpp  pdf_test.cpp  raylib_test.cpp  train_model.cpp  train_using_config.cpp
